# Python

./: 1am_lofi.py  README.md  balloontip.py  covidinfo.py  dhruti_score.py  ipadd.py  login_det_saver.py  login_det_saver_gui.py  moviemanager.py  pdftomp3.py  pong.py  stack_smash.py  sudoku_checker.py  sudoku_solver.py  tic-tac-toe.py  timesincebirth.py  yt_playlist_vid_embed_link.py
balloon_tip/: balloontip.py  pyproject.toml
covid_info/: covidinfo.py  pyproject.toml
login_det_saver_gui/: login_det_saver_gui.py  pyproject.toml
pdf_to_mp3/: pdftomp3.py  pyproject.toml
pong/: pong.py  pyproject.toml
stack_smash/: pyproject.toml  stack_smash.py
tic-tac-toe/: pyproject.toml  tic-tac-toe.py
yt_playlist_vid_embed_link/: pyproject.toml  yt_playlist_vid_embed_link.py
