[tool.poetry]
name = "stack-smash"
version = "0.1.0"
description = ""
authors = ["Shubh A Chudasama <shubh.cs@proton.me>"]
readme = "README.md"
packages = [{include = "stack_smash"}]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
