[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Shubh A Chudasama <shubh.cs@proton.me>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
